# ForceX-Game-Engine

./: .gitignore  .project  CMakeLists.txt  README.md  build.bat  build.gradle  build.sh  local.properties  settings.gradle
Backend/android-backend/app/: build.gradle
Backend/windows-backend/: build.xml
Backend/windows-backend/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
Backend/windows-backend/nbproject/private/: private.properties
Core/: build.xml
Core/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
Core/nbproject/private/: private.properties
Core/src/com/forcex/: FX.java
Core/src/com/forcex/anim/: Animation.java  AnimationControl.java  AnimationTrack.java  Animator.java  Bone.java  KeyFrame.java  SkeletonNode.java
Core/src/com/forcex/app/: EventType.java  Game.java  GameWrapper.java  InputListener.java  Screen.java
Core/src/com/forcex/collision/: BoundingBox.java
Core/src/com/forcex/core/: GL.java  SystemDevice.java
Core/src/com/forcex/gfx3d/: Camera.java  DrawDynamicTriangle.java  ModelObject.java  ModelRenderer.java  PathTracing.java
Core/src/com/forcex/gtasdk/: DFFFrame.java  DFFGeometry.java  DFFSDK.java  DFFSkin.java  DFFStream.java
Core/src/com/forcex/gui/: Dialog.java  Drawer.java  FileDialog.java  Layout.java  Toast.java  UIContext.java  View.java
Core/src/com/forcex/io/: BFFtoFFT.java  FileStreamReader.java  FileStreamWriter.java  FileUtils.java  VideoClip.java  WavFile.java
Core/src/com/forcex/math/: HeightMap.java  Matrix3f.java  Matrix4f.java  Plane.java  Quaternion.java  Vector3f.java
Core/src/com/forcex/net/: Download.java  OnDownloadListener.java  PropertyFile.java
Core/src/com/forcex/postprocessor/: ContrastPass.java  FXAAFilter.java  FrameBuffer.java  Pass.java  Utils.java
Core/src/com/forcex/utils/: BufferUtils.java  Color.java  GameUtils.java  LanguageString.java  PoolArray.java  (+1 more)
Natives/ForceX Core Android/app/: CMakeLists.txt  build.gradle
Natives/ForceX Core Android/app/src/androidTest/java/com/fastsmartsystem/forcexcore/: ExampleInstrumentedTest.java
Natives/ForceX Core Android/app/src/main/: AndroidManifest.xml
Natives/ForceX Core Android/app/src/main/cpp/dxt/: clusterfit.h  colourfit.h  colourset.h  maths.h  rangefit.h  singlecolourfit.h
Natives/ForceX Core Android/app/src/test/java/com/fastsmartsystem/forcexcore/: ExampleUnitTest.java
Natives/ForceX Core Windows/: compile 64.bat  compile.bat  rg_etc1.h
Natives/ForceX OpenAL Android/app/: CMakeLists.txt  build.gradle
Natives/ForceX OpenAL Android/app/src/androidTest/java/com/fastsmartsystem/openalforcex/: ExampleInstrumentedTest.java
Natives/ForceX OpenAL Android/app/src/main/: AndroidManifest.xml
Natives/ForceX OpenAL Android/app/src/main/cpp/: openal.c
Natives/ForceX OpenAL Android/app/src/main/cpp/OpenAL32/: alState.c
Natives/ForceX OpenAL Android/app/src/main/java/com/fastsmartsystem/openalforcex/: MainActivity.java
Natives/ForceX OpenAL Android/app/src/main/res/values/: strings.xml
Natives/ForceX OpenAL Android/app/src/test/java/com/fastsmartsystem/openalforcex/: ExampleUnitTest.java
android-backend/: AndroidManifest.xml  build.gradle
android-backend/assets/fonts/: arial.fft  century.fft  digital.fft  diploma.fft
android-backend/assets/shaders/: blur.fs  blur.vs  default.fs  default.vs  fxaa.fs  fxaa.vs  lens.fs  lens.vs  shadow.fs  shadow.vs  sprite.fs  sprite.vs  water.fs  water.vs
examples/rpg-car/: .project  build.gradle  settings.gradle
examples/rpg-car/android/: .project  build.gradle
examples/rpg-car/core/: .project
examples/rpg-car/desktop/: .project  build.gradle
examples/super-ai/: .project  build.gradle
examples/super-ai/core/: .project
examples/super-ai/desktop/: .project  build.gradle
forcex/: build.gradle
forcex/jni/: imageformat.h  main.cpp
forcex/jni/dxt/: alpha.cpp  alpha.h  colourblock.h  squish.cpp
forcex/jni/oal/: CmakeLists.txt  openal.c
forcex/jni/oal/Alc/: ALc.c
forcex/jni/oal/OpenAL32/: alBuffer.c
forcex/src/com/forcex/: FX.java
windows-backend/: .classpath  .project  build.gradle
(+389 files in other folders)
